--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- <link rel="stylesheet" href="./styles/reset.css" /> -->
+    <link rel="stylesheet" href="./styles/style.css" />
+    <title>Address Book</title>
   </head>
   <body>
-    <form>
+    <header>
+      <h1>Address Book</h1>
+      <p>Add and view all of your contacts.</p>
+    </header>
+
+    <div class="container">
+      <h1>Address List</h1>
+      <div class="addresses">Your addresses will appear here.</div>
+      <label for="contactType">Filter by type</label>
+      <select id="contactType" name="country">
+        <option value="family">Family</option>
+        <option value="friends">Friends</option>
+        <option value="work">Work</option>
+        <option value="other">Other</option>
+      </select>
+    </div>
+
+    <div class="container">
+      <h1>Add Address</h1>
       <form>
         <label for="contactName">Contact Name</label>
         <input
@@ -47,6 +67,7 @@
           <option value="family">Family</option>
           <option value="friends">Friends</option>
           <option value="work">Work</option>
+          <option value="other">Other</option>
         </select>
 
         <label for="contactNotes">Notes</label>
@@ -59,6 +80,7 @@
 
         <input type="button" value="Submit" />
       </form>
-    </form>
+    </div>
+    <script src="./scripts/script.js"></script>
   </body>
 </html>
